plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'org.applecommander'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

javafx {
    version = '25.0.4'
    modules = ['javafx.controls', 'javafx.graphics', 'javafx.fxml']
}

application {
    mainClass = 'org.applecommander.fx.AppleCommanderFX'
}

dependencies {
    implementation 'org.applecommander:AppleCommander:14.1'
    implementation 'com.github.Dansoftowner:jSystemThemeDetector:3.6'

    testImplementation platform('org.junit:junit-bom:6.0.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
}

tasks.named('test') {
    useJUnitPlatform()
}